# PyCpp-FTRL

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: ftrl.cc  ftrl.h  py.cc
